applications/overlays/hcloud-robot/transmission-anime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-anime-ingress
  namespace: media
  annotations:
    'external-dns.alpha.kubernetes.io/hostname': 'transmission-anime.macro.network'
    'external-dns.alpha.kubernetes.io/cloudflare-proxied': 'true'
    'traefik.ingress.kubernetes.io/router.entrypoints': 'websecure'
spec:
  tls:
    - hosts:
        - transmission-anime.macro.network
  rules:
    - host: transmission-anime.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-anime
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-anime-flood-ingress
  namespace: media
  annotations:
    'external-dns.alpha.kubernetes.io/hostname': 'flood-anime.macro.network'
    'external-dns.alpha.kubernetes.io/cloudflare-proxied': 'true'
    'traefik.ingress.kubernetes.io/router.entrypoints': 'websecure'
spec:
  tls:
    - hosts:
        - flood-anime.macro.network
  rules:
    - host: flood-anime.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-anime-flood
                port:
                  number: 3001
